// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sanity check 1`] = `
WordDocument {
  "doc": officegen {
    "_events": {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createNestedOrderedList": [Function],
    "createNestedUnOrderedList": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": [],
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": {
      "cp:category": {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
    Symbol(kCapture): false,
  },
  "document": Image {
    "children": [],
    "name": "Image",
    "parent": null,
    "props": {},
    "root": [Circular],
  },
}
`;

exports[`should render an image 1`] = `
WordDocument {
  "doc": officegen {
    "_events": {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createNestedOrderedList": [Function],
    "createNestedUnOrderedList": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": [],
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": {
      "cp:category": {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
    Symbol(kCapture): false,
  },
  "document": Image {
    "children": [],
    "name": "Image",
    "parent": null,
    "props": {
      "src": "../src/concr.png",
    },
    "root": [Circular],
  },
}
`;

exports[`should render an image and adjust it size with style prop 1`] = `
WordDocument {
  "doc": officegen {
    "_events": {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createNestedOrderedList": [Function],
    "createNestedUnOrderedList": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": [],
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": {
      "cp:category": {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
    Symbol(kCapture): false,
  },
  "document": Image {
    "children": [],
    "name": "Image",
    "parent": null,
    "props": {
      "src": "../src/concr.png",
      "style": {
        "height": "400",
        "width": "400",
      },
    },
    "root": [Circular],
  },
}
`;

exports[`should render an image and adjust it size with width and height prop 1`] = `
WordDocument {
  "doc": officegen {
    "_events": {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createNestedOrderedList": [Function],
    "createNestedUnOrderedList": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": [],
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": {
      "cp:category": {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
    Symbol(kCapture): false,
  },
  "document": Image {
    "children": [],
    "name": "Image",
    "parent": null,
    "props": {
      "height": "400",
      "src": "../src/concr.png",
      "width": "400",
    },
    "root": [Circular],
  },
}
`;

exports[`should render an image and align it 1`] = `
WordDocument {
  "doc": officegen {
    "_events": {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createNestedOrderedList": [Function],
    "createNestedUnOrderedList": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": [],
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": {
      "cp:category": {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
    Symbol(kCapture): false,
  },
  "document": Image {
    "children": [],
    "name": "Image",
    "parent": null,
    "props": {
      "align": "justify",
      "src": "../src/concr.png",
    },
    "root": [Circular],
  },
}
`;
